--- a/index.html
+++ b/index.html
@@ -11,7 +11,22 @@
     <title>My Tic Tac Toe</title>
   </head>
   <body>
-    <main class="container">
+    <div class="modal-container">
+      <div class="modal modal-close">
+        <p class="close">X</p>
+        <div>
+          <h1 class="modal-title">My Tic Tac Toe</h1>
+        </div>
+        <div class="modal-text"> 
+          <h2>Are you a Monkey or Are you a Squirrel??</h2>
+            <img src="back.svg" alt="">
+            <img src="back.svg" alt="">
+            <p>Please select one to play.</p>
+          <button class=" btn-modal">Start</button>
+        </div>
+      </div>
+    </div>
+    <main class="container">      
       <section class="title-container">
         <h1 class="title">My Tic Tac Toe</h1>
       </section>
