--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <title>My Tic Tac Toe</title>
   </head>
   <body>
+    <!-- MODAL -->
     <div class="modal-container">
       <div class="modal modal-close">
         <p class="close">X</p>
@@ -19,30 +20,49 @@
         </div>
         <div class="modal-text"> 
           <h2>Are you a Monkey or Are you a Squirrel??</h2>
-            <img src="back.svg" alt="">
-            <img src="back.svg" alt="">
+            <img src="monkey.svg" alt="">
+            <img src="squirrel.png" alt="">
             <p>Please select one to play.</p>
           <button class=" btn-modal">Start</button>
         </div>
       </div>
     </div>
     <main class="container">      
-      <section class="title-container">
+      <header class="title-container">
         <h1 class="title">My Tic Tac Toe</h1>
-      </section>
+      </header>
       <section>
         <div class="game-container">
-          <div class="box-0">0</div>
-          <div class="box-1">1</div>
-          <div class="box-2">2</div>
-          <div class="box-3">3</div>
-          <div class="box-4">4</div>
-          <div class="box-5">5</div>
-          <div class="box-6">6</div>
-          <div class="box-7">7</div>
-          <div class="box-8">8</div>
+          <div class="box">
+            <img class="image" src="monkey.svg" alt="">
+          </div>
+          <div class="box">
+            <img class="image" src="squirrel.png" alt="">
+          </div>
+          <div class="box">
+            
+          </div>
+          <div class="box"></div>
+          <div class="box"></div>
+          <div class="box"></div>
+          <div class="box"></div>
+          <div class="box">
+            <div class="card">
+              <div class="front"></div>
+              <div class="back"></div>
+            </div>
+          </div>
+          <div class="box">
+            <div class="card">
+              <div class="front">front of card</div>
+              <div class="back">
+                <!-- <img class="image" src="monkey.svg" alt=""> -->
+              </div>
+            </div>
+          </div>
         </div>
       </section>
+      <!-- GAME CONTROL -->
       <section class="game-control">
         <div class="ctrl-container player-0">
           <p class="player-label">Player 1</p>
