--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
           </div>
           <div class="modal-text"> 
             <div class="modal-msg">
-
+              <p><span class="first-player"></span><br>you go first, so tell us...</p>
               <h2>Are you a Monkey or a Squirrel??</h2>
             </div>
             <div class="modal-img">
@@ -37,6 +37,7 @@
         <header class="title-container">
           <h1 class="title">My Tic Tac Toe</h1>
         </header>
+        <!-- Game Section -->
         <section>
           <div class="game-container">
             <!-- box 1 -->
@@ -52,38 +53,23 @@
             <!-- box 6 -->
             <div class="box"></div>
             <!-- box 7 -->
-            <div class="box">
-              <div class="card">
-                <div class="front"></div>
-                <div class="back">
-                  <!-- <img class="" src="" alt=""> -->
-                </div>
-              </div>
-            </div>
+            <div class="box"></div>
             <!-- box 8 -->
-            <div class="box">
-              <div class="card">
-                <div class="front"></div>
-                <div class="back">
-                  <!-- <img class="" src="" alt=""> -->
-                </div>
-              </div>
-            </div>
+            <div class="box"></div>
             <!-- box 9 -->
-            <div class="box">
-              <!-- <div class="card">
+            <div class="box"></div>         
+            
+             <!-- <div class="card">
                 <div class="front"></div>
                 <div class="back">
-                  <img class="box-img" src="" alt="">
+                  <img class="" src="" alt="">
                 </div>
               </div> -->
-            </div>
-            
           </div>
         </section>
         <!-- GAME CONTROL -->
         <section class="game-control">
-          <div class="ctrl-container player-1">
+          <div class="player-1 ctrl-container">
             <p class="player-label">Player 1</p>
             <p class="player-score" id="player-0">0</p>
           </div>
@@ -92,7 +78,7 @@
             <button class="btn btn-next">Next Round</button>
             <button class="btn btn-reset">Reset</button>
           </div>
-          <div class="ctrl-container player-2 player-active">
+          <div class="player-2 ctrl-container">
             <p class="player-label">Player 2</p>
             <p class="player-score" id="player-1">0</p>
           </div>
