--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
               <div class="card" id="card">
                 <div class="front"></div>
                 <div class="back">
-                  <img class="" src="" alt="">
+                  <img class="animal-img" src="" alt="">
                 </div>
               </div>
             </div> 
@@ -54,7 +54,7 @@
               <div class="card" id="card">
                 <div class="front"></div>
                 <div class="back">
-                  <img class="" src="" alt="">
+                  <img class="animal-img" src="" alt="">
                 </div>
               </div>
             </div>  
@@ -63,7 +63,7 @@
               <div class="card">
                 <div class="front"></div>
                 <div class="back">
-                  <img class="" src="" alt="">
+                  <img class="animal-img" src="" alt="">
                 </div>
               </div>
             </div>  
@@ -72,7 +72,7 @@
               <div class="card">
                 <div class="front"></div>
                 <div class="back">
-                  <img class="" src="" alt="">
+                  <img class="animal-img" src="" alt="">
                 </div>
               </div>
             </div>  
@@ -81,7 +81,7 @@
               <div class="card">
                 <div class="front"></div>
                 <div class="back">
-                  <img class="" src="" alt="">
+                  <img class="animal-img" src="" alt="">
                 </div>
               </div>
             </div> 
@@ -90,7 +90,7 @@
               <div class="card">
                 <div class="front"></div>
                 <div class="back">
-                  <img class="" src="" alt="">
+                  <img class="animal-img" src="" alt="">
                 </div>
               </div>
             </div>  
@@ -99,7 +99,7 @@
               <div class="card">
                 <div class="front"></div>
                 <div class="back">
-                  <img class="" src="" alt="">
+                  <img class="animal-img" src="" alt="">
                 </div>
               </div>
             </div>  
@@ -108,7 +108,7 @@
               <div class="card">
                 <div class="front"></div>
                 <div class="back">
-                  <img class="" src="" alt="">
+                  <img class="animal-img" src="" alt="">
                 </div>
               </div>
             </div>  
@@ -117,7 +117,7 @@
               <div class="card">
                 <div class="front"></div>
                 <div class="back">
-                  <img class="" src="" alt="">
+                  <img class="animal-img" src="" alt="">
                 </div>
               </div>
             </div>         
