--- a/pruebas/pruebas.html
+++ b/pruebas/pruebas.html
@@ -11,143 +11,168 @@
     <title>Pruebas</title>
 </head>
 <body>
-    <header class="title-container">
+  
+    <header class="title-container ">
         <h1 class="title">My Tic Tac Toe</h1>
     </header>
+    <!-- ========== TIC TAC TOE ========== -->
     <main>
         <!-- ========== PLAYER 1 PANEL ========== -->
-        <section class="player-container">
-            <p class="player-turn">Your Turn!</p>
-            <img class="player-img" src="monkey.svg" alt="">
-            <div class="player-1 player">
+        <div class="player-1 player-container">
+            <p class="player-1 active-turn"></p>
+            <img class="player-1 active-img" src="" alt="">
+            <div class="player">
                 <p class="player-label">Player 1</p>
                 <p class="player-score" id="player-1">0</p>
             </div>
-        </section>
+        </div>
         <!-- ========== GAME PANEL ========== -->
         <section class="center-container">
             <div class="game-container">
                 <div class="boxes-container">
                 <!-- box 1 -->
-                <div class="box">
-                  <div class="card" id="card">
-                    <div class="front"></div>
-                    <div class="back">
-                      <img class="animal-img" src="" alt="">
+                  <div class="box">
+                    <div class="card" id="card">
+                      <div class="front"></div>
+                      <div class="back">
+                        <img class="animal-img" src="" alt="">
+                      </div>
                     </div>
-                  </div>
-                </div> 
-                <!-- box 2 -->
-                <div class="box">
-                  <div class="card" id="card">
-                    <div class="front"></div>
-                    <div class="back">
-                      <img class="animal-img" src="" alt="">
+                  </div> 
+                  <!-- box 2 -->
+                  <div class="box">
+                    <div class="card" id="card">
+                      <div class="front"></div>
+                      <div class="back">
+                        <img class="animal-img" src="" alt="">
+                      </div>
                     </div>
-                  </div>
-                </div>  
-                <!-- box 3 -->
-                <div class="box">
-                  <div class="card">
-                    <div class="front"></div>
-                    <div class="back">
-                      <img class="animal-img" src="" alt="">
+                  </div>  
+                  <!-- box 3 -->
+                  <div class="box">
+                    <div class="card">
+                      <div class="front"></div>
+                      <div class="back">
+                        <img class="animal-img" src="" alt="">
+                      </div>
                     </div>
-                  </div>
-                </div>  
-                <!-- box 4 -->
-                <div class="box">
-                  <div class="card">
-                    <div class="front"></div>
-                    <div class="back">
-                      <img class="animal-img" src="" alt="">
+                  </div>  
+                  <!-- box 4 -->
+                  <div class="box">
+                    <div class="card">
+                      <div class="front"></div>
+                      <div class="back">
+                        <img class="animal-img" src="" alt="">
+                      </div>
                     </div>
-                  </div>
-                </div>  
-                <!-- box 5 -->
-                <div class="box">
-                  <div class="card">
-                    <div class="front"></div>
-                    <div class="back">
-                      <img class="animal-img" src="" alt="">
+                  </div>  
+                  <!-- box 5 -->
+                  <div class="box">
+                    <div class="card">
+                      <div class="front"></div>
+                      <div class="back">
+                        <img class="animal-img" src="" alt="">
+                      </div>
                     </div>
-                  </div>
-                </div> 
-                <!-- box 6 -->
-                <div class="box">
-                  <div class="card">
-                    <div class="front"></div>
-                    <div class="back">
-                      <img class="animal-img" src="" alt="">
+                  </div> 
+                  <!-- box 6 -->
+                  <div class="box">
+                    <div class="card">
+                      <div class="front"></div>
+                      <div class="back">
+                        <img class="animal-img" src="" alt="">
+                      </div>
                     </div>
-                  </div>
-                </div>  
-                <!-- box 7 -->
-                <div class="box">
-                  <div class="card">
-                    <div class="front"></div>
-                    <div class="back">
-                      <img class="animal-img" src="" alt="">
+                  </div>  
+                  <!-- box 7 -->
+                  <div class="box">
+                    <div class="card">
+                      <div class="front"></div>
+                      <div class="back">
+                        <img class="animal-img" src="" alt="">
+                      </div>
                     </div>
-                  </div>
-                </div>  
-                <!-- box 8 -->
-                <div class="box">
-                  <div class="card">
-                    <div class="front"></div>
-                    <div class="back">
-                      <img class="animal-img" src="" alt="">
+                  </div>  
+                  <!-- box 8 -->
+                  <div class="box">
+                    <div class="card">
+                      <div class="front"></div>
+                      <div class="back">
+                        <img class="animal-img" src="" alt="">
+                      </div>
                     </div>
-                  </div>
-                </div>  
-                <!-- box 9 -->
-                <div class="box">
-                  <div class="card">
-                    <div class="front"></div>
-                    <div class="back">
-                      <img class="animal-img" src="" alt="">
+                  </div>  
+                  <!-- box 9 -->
+                  <div class="box">
+                    <div class="card">
+                      <div class="front"></div>
+                      <div class="back">
+                        <img class="animal-img" src="" alt="">
+                      </div>
                     </div>
-                  </div>
-                </div>         
+                  </div>         
                 </div>
             </div>
-        <!-- ========== BUTTONS PANEL ========== -->  
-            <section class="btn-container">
-                <div class=" ctrl-container input-container">
+            <!-- ========== BUTTONS PANEL ========== -->  
+            <section class="input-container">
+                <div class="btn-container">
                     <button class="btn btn-new-game">New game</button>
                     <!-- <button class="btn btn-next">Next Round</button> -->
                     <button class="btn btn-reset">Reset</button>
+                    <!-- <p>Set Winnig Score</p>
+                    <select class="input-select">
+                        <option value="">--Please choose an option--</option>
+                        <option value="3">3</option>
+                        <option value="5">5</option>
+                        <option value="7">7</option>
+                    </select> -->
                   </div>
             </section>
         </section>
         <!-- ========== PLAYER 2 PANEL ========== -->
-        <section class="player-container">
-            <p class="player-turn">Your Turn!</p>
-            <img class="player-img"  src="squirrel.png" alt="">
-            <div class="player-2 player">
+        <section class="player-2 player-container">
+            <p class="player-2 active-turn"></p>
+            <img class="player-2 active-img"  src="" alt="">
+            <div class="player">
                 <p class="player-label">Player 2</p>
                 <p class="player-score" id="player-2">0</p>
-              </div>
+            </div>
         </section>
     </main>
     <!-- ========== MODALS PANEL ========== -->
     <div class="modal-container">
         <div class="modal modal-close">
-          <p class="close">X</p>
-          <div class="modal-title">
+          <p class="btn-close-modal">X</p>
+          <!-- <div class="modal-title">
             <h1>My Tic Tac Toe</h1>
+          </div> -->
+          <div class="modal-title">
+            <h1 class="first-player"></h1>
           </div>
+
           <div class="modal-text"> 
+
             <div class="modal-msg">
-              <p><span class="first-player"></span><br>you go first, so tell us...</p>
-              <h2>Are you a Monkey or a Squirrel??</h2>
+              <!-- <p><span class="first-player"></span><br>you go first, so tell us...</p> -->
+              <p>you go first, so tell us...</p>
+              <h2 class="first-player">Are you a Monkey or a Squirrel??</h2>
             </div>
+
             <div class="modal-img">
               <img class="modal-monkey" src="monkey.svg" alt="">
               <img class="modal-squirrel" src="squirrel.png" alt="">
+              <p>Please select one to play.</p>
             </div>
-            <p>Please select one to play.</p>
-            <button class="btn btn-modal">Start</button>
+            
+            <div class='btn-modal-container'>
+              <div class="btn-container">
+                  <button class="btn btn-start-modal">Start</button>
+              </div>
+            </div>  
+
+            <!-- <button class="btn btn-modal">Start</button> -->
+            
+
           </div>
         </div>
       </div>
