modal css ok pero falta ctrl Next round

--- a/pruebas/pruebas.html
+++ b/pruebas/pruebas.html
@@ -117,15 +117,7 @@
             <section class="input-container">
                 <div class="btn-container">
                     <button class="btn btn-new-game">New game</button>
-                    <!-- <button class="btn btn-next">Next Round</button> -->
                     <button class="btn btn-reset">Reset</button>
-                    <!-- <p>Set Winnig Score</p>
-                    <select class="input-select">
-                        <option value="">--Please choose an option--</option>
-                        <option value="3">3</option>
-                        <option value="5">5</option>
-                        <option value="7">7</option>
-                    </select> -->
                   </div>
             </section>
         </section>
@@ -147,6 +139,7 @@
             <h1 class="first-player"></h1>
           </div>
           <div class="modal-text" id="modal-text"> 
+          <!-- <div class="modal-text" id="end-msg"> -->
             <div class="modal-msg">
               <p>you go first, so tell us...</p>
               <h2 class="first-player">Are you a Monkey or a Squirrel??</h2>
@@ -158,32 +151,12 @@
             </div>
             <div class='modal-btn'>
               <div class="btn-container">
-                  <button class="btn btn-start-modal">Start</button>
+                  <button class="btn btn-start-modal" id="btn-modal">Start</button>
               </div>
             </div>  
           </div>
         </div>
       </div>
-
-        <!-- ========== MODALS MESSAGE ========== -->
-      <!-- <div class="modal-text" id="modal-text"> 
-          <div class="modal-title">
-              <h2 class="first-player">Player 2</h3>
-          </div>
-          <div class="modal-msg">
-            <h1 class="first-player">WINS</h1>
-          </div>
-          <div class="modal-img">
-            <img class="modal-monkey" src="monkey.svg" alt="">
-          </div>          
-          <div class='modal-btn'>
-            <div class="btn-container">
-              <button class="btn btn-next-modal">Next Round</button>
-            </div>
-          </div>
-      </div> -->
-                        
-
     <!-- ========== SCRIPT ========== -->  
     <script src="pruebaapp.js"></script>    
 </body>
