--- a/index.html
+++ b/index.html
@@ -8,10 +8,9 @@
     <link href="https://fonts.googleapis.com/css2?family=Kanit:ital,wght@1,900&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:100,300,400,600" rel="stylesheet" type="text/css">
     <link rel="stylesheet" href="styles.css" />
-    <title>Pruebas</title>
+    <title>My Tic Tac Toe</title>
 </head>
 <body>
-  
     <header class="title-container ">
         <h1 class="title">My Tic Tac Toe</h1>
     </header>
